# xarray-grass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/xarray_grass/: __init__.py  coord_utils.py  grass_backend_array.py  grass_interface.py  grass_session.py  to_grass.py  xarray2grass.py  xarray_grass.py
tests/: conftest.py  test_coord_utils.py  test_grass_interface.py  test_tograss.py  test_tograss_error_handling.py  test_xarray2grass.py  test_xarray_grass.py
